Allow unnamed parameters in function definitions

--- a/doc/c23.md
+++ b/doc/c23.md
@@ -25,6 +25,11 @@ In previous revisions of C, labels like `foo:`, `case 123:`, or
 and they can now appear intermixed with declarations in compound
 statements.
 
+## [N2510]: Allow unnamed parameters in a function definition
+
+C23 allows you to omit the name of a parameter in the prototype of
+a function definition that does not use that parameter.
+
 ## [N2549]: Binary integer constants
 
 C23 allows binary integer constants in addition to octal, decimal,
@@ -33,4 +38,5 @@ and hexadecimal, using syntax like `0b01101011`.
 [N2265]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2265.pdf
 [N2418]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2418.pdf
 [N2508]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2508.pdf
+[N2510]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2510.pdf
 [N2549]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2549.pdf
