init: Allow empty initializers

--- a/doc/c23.md
+++ b/doc/c23.md
@@ -35,8 +35,14 @@ a function definition that does not use that parameter.
 C23 allows binary integer constants in addition to octal, decimal,
 and hexadecimal, using syntax like `0b01101011`.
 
+## [N2900]: Consistent, warningless, and intuitive initialization with {}
+
+C23 allows empty initializers to initialize an object as if it had
+static storage duration.
+
 [N2265]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2265.pdf
 [N2418]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2418.pdf
 [N2508]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2508.pdf
 [N2510]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2510.pdf
 [N2549]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2549.pdf
+[N2900]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2900.htm
