doc/c23: Fix links to enum documents

--- a/doc/c23.md
+++ b/doc/c23.md
@@ -52,7 +52,7 @@ of representing the value is chosen. Outside of an enum containing
 a large enumerator, the types of all enumerators are changed to the
 the enum type.
 
-## [N3030]: Enhanced Enumerations
+## [N3030]: Enhancements to Enumerations
 
 C23 allows enum types with fixed underlying types using syntax like
 `enum E : unsigned long`. These enum types are compatible with the
@@ -62,9 +62,11 @@ Enum types with fixed underlying types are complete by the end of
 the underlying type specifier, so they can be forward-declared and
 used inside the enum.
 
-[N2265]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2265.pdf
-[N2418]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2418.pdf
-[N2508]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2508.pdf
-[N2510]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2510.pdf
-[N2549]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2549.pdf
-[N2900]: http://www.open-std.org/jtc1/sc22/wg14/www/docs/n2900.htm
+[N2265]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2265.pdf
+[N2418]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2418.pdf
+[N2508]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2508.pdf
+[N2510]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2510.pdf
+[N2549]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2549.pdf
+[N2900]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2900.htm
+[N3029]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n3029.htm
+[N3030]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n3030.htm
