decl: Support variadic functions with no other parameters

--- a/doc/c23.md
+++ b/doc/c23.md
@@ -50,6 +50,12 @@ with `typeof` to specify that same type.
 C23 also introduces `typeof_unqual`, which behaves the same as
 `typeof` except that the specified type is unqualified.
 
+## [N2975]: Relax requirements for variadic parameter lists
+
+C23 allows variadic functions with no named parameters. The second
+argument to the va_arg macro is now optional and is only used for
+backwards compatibility.
+
 ## [N3029]: Improved Normal Enumerations
 
 C23 allows enumerators outside the range of `int`. When an enum
@@ -79,5 +85,6 @@ used inside the enum.
 [N2549]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2549.pdf
 [N2900]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2900.htm
 [N2927]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2927.htm
+[N2975]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2975.pdf
 [N3029]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n3029.htm
 [N3030]: https://www.open-std.org/jtc1/sc22/wg14/www/docs/n3030.htm
